# Solution-for-Equations

./: CMakeLists.txt  README.md  main.cpp
